--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,16 @@
 {
-    "name": "netresearch/assetpicker",
-    "description": "A free asset or file picker with abstraction layer allowing several adapters like GitHub, EnterMediaDB, Amazon S3, Google Drive, Dropbox etc.",
+    "name": "jeremydenoun/assetpicker",
+    "description": "A free asset or file picker with abstraction layer allowing several adapters like GitHub, Google Drive etc.",
     "type": "library",
     "authors": [
         {
             "name": "Christian Opitz",
             "email": "christian.opitz@netresearch.de"
-        }
+        },
+	{
+	    "name": "Jeremy Denoun",
+	    "email": "denoun_j@epita.fr"
+	}
     ],
     "license": "MIT",
     "require": {
